--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,9 @@
     ],
     "require": {
         "hhvm": "~4.113.0",
-        "hhvm/hsl": "^4.41",
         "hhvm/type-assert": "^4.1.2",
         "facebook/hack-router": "^0.19.7",
-        "azjezz/http-normalizer": "^1.1",
-        "facebook/definition-finder": "^2.14"
+        "azjezz/http-normalizer": "^1.1"
     },
     "require-dev": {
         "facebook/difflib": "^1.1.1",
