--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "framework"
     ],
     "require": {
-        "hhvm": "~4.113.0",
+        "hhvm": "~4.113.0 || ~4.114.0",
         "hhvm/type-assert": "^4.1.2",
         "facebook/hack-router": "^0.19.7",
         "azjezz/http-normalizer": "^1.1"
