--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         os: ['ubuntu-latest']
         hhvm: ['4.113', '4.114', '4.115']
-        dependencies: ['lowest', 'highest', 'locked']
+        dependencies: ['highest', 'locked']
         experimental: [false]
 
         include:
