--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -11,14 +11,13 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest']
-        hhvm: ['4.113', '4.114', '4.115']
+        hhvm: ['4.111', '4.112', '4.113', '4.114', '4.115']
         dependencies: ['highest', 'locked']
         experimental: [false]
 
         include:
           # - { os: 'ubuntu-latest', hhvm: 'nightly', dependencies: 'locked', experimental: true, composer-options: '--ignore-platform-req hhvm' }
-          - { os: 'ubuntu-latest', hhvm: '4.112', dependencies: 'locked', experimental: true, composer-options: '--ignore-platform-req hhvm' }
-          - { os: 'ubuntu-latest', hhvm: '4.111', dependencies: 'locked', experimental: true, composer-options: '--ignore-platform-req hhvm' }
+          - { os: 'ubuntu-latest', hhvm: '4.110', dependencies: 'locked', experimental: true, composer-options: '--ignore-platform-req hhvm' }
 
     services:
       httpbin:
