--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -11,13 +11,8 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest']
-        hhvm: ['4.111', '4.112', '4.113', '4.114', '4.115']
+        hhvm: ['4.113', '4.114', '4.115']
         dependencies: ['highest', 'locked']
-        experimental: [false]
-
-        include:
-          # - { os: 'ubuntu-latest', hhvm: 'nightly', dependencies: 'locked', experimental: true, composer-options: '--ignore-platform-req hhvm' }
-          - { os: 'ubuntu-latest', hhvm: '4.110', dependencies: 'locked', experimental: true, composer-options: '--ignore-platform-req hhvm' }
 
     services:
       httpbin:
@@ -44,7 +39,6 @@ jobs:
         run: "hhvm vendor/bin/hh-autoload"
 
       - name: "running unit tests"
-        continue-on-error: ${{ matrix.experimental }}
         env:
           HTTPBIN_BASE_URI: "http://localhost:8080/"
         run: "hhvm vendor/bin/hacktest tests"
